--- a/Hackaton/self home-training helper/login.html
+++ b/Hackaton/self home-training helper/login.html
@@ -67,7 +67,7 @@
                                         <li> <a href="exercise.html">Exercise</a> </li>
                                         <li><a href="brand.html">Tutorial</a></li>
                                         <li><a href="special.html">View Record</a></li>
-                                        <li><a href="login.html">Login</a></li>
+                                        <li><a href="contact.html">Login</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
                                         </li>
@@ -81,37 +81,21 @@
         </div>
         <!-- end header inner -->
     </header>
-    <!-- end header -->
-    <section class="slider_section">
-        <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="first-slide" src="images/intro2.png" alt="First slide" width="90%" style="margin-left: 100px; ">
-            
-                </div>
-                <div class="carousel-item">
-                    <img class="second-slide" src="images/intro3.jpg" alt="Second slide" width="40%" height="40%" style="margin-left: 500px;">
-                    
-                </div>
-                <div class="carousel-item">
-                    <img class="third-slide" src="images/intro4.jpg" alt="Third slide" width="40%" height="40%" style="margin-left: 500px; margin-top: 150px; margin-bottom: 200px;">
-                </div>
-                <div class="carousel-item">
-                    <img class="four-slide" src="images/intro5.jpg" alt="four-slide slide" width="40%" height="40%" style="margin-left: 500px; margin-top: 100px; margin-bottom: 200px;">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                <i class='fa fa-angle-left'></i>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <i class='fa fa-angle-right'></i>
-            </a>
+
+    <div class="container mt-3" style="margin-top: 150px !important;">
+        <div class="mb-3">
+            <input type="email" class="form-control" placeholder="email" id="email-new">
         </div>
-    </section>
+        <div class="mb-3">
+            <input type="password" class="form-control" placeholder="pw" id="pw-new">
+        </div>
+        <button type="submit" class="btn btn-outline-dark" id="login" style="width: 100px;">로그인</button>
+        <button type="submit" class="btn btn-outline-dark" id="register" style="width: 100px;">회원가입</button>
+    </div>
 
 
     <!-- footer -->
-    <footer>
+    <footer style="margin-top: 350px;">
         <div id="contact" class="footer">
             <div class="container">
                 <div class="row pdn-top-30">
