--- a/Hackaton/self home-training helper/tutorial.html
+++ b/Hackaton/self home-training helper/tutorial.html
@@ -67,7 +67,7 @@
                                         <li> <a href="exercise.html">Exercise</a> </li>
                                         <li><a href="brand.html">Tutorial</a></li>
                                         <li><a href="special.html">View Record</a></li>
-                                        <li><a href="login.html">Login</a></li>
+                                        <li><a href="contact.html">Login</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
                                         </li>
@@ -86,19 +86,19 @@
         <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="images/intro2.png" alt="First slide" width="90%" style="margin-left: 100px; ">
+                    <img class="first-slide" src="images/t6.jpg" alt="First slide" style="margin-top: 100px; margin-bottom: 100px;">
             
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="images/intro3.jpg" alt="Second slide" width="40%" height="40%" style="margin-left: 500px;">
+                    <img class="second-slide" src="images/t7.jpg" alt="Second slide" style="margin-top: 130px; margin-bottom: 100px;">
                     
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="images/intro4.jpg" alt="Third slide" width="40%" height="40%" style="margin-left: 500px; margin-top: 150px; margin-bottom: 200px;">
+                    <img class="third-slide" src="images/t8.jpg" alt="Third slide" style="margin-top: 50px; margin-bottom: 100px;">
                 </div>
-                <div class="carousel-item">
+                <!-- <div class="carousel-item">
                     <img class="four-slide" src="images/intro5.jpg" alt="four-slide slide" width="40%" height="40%" style="margin-left: 500px; margin-top: 100px; margin-bottom: 200px;">
-                </div>
+                </div> -->
             </div>
             <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
                 <i class='fa fa-angle-left'></i>
